<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".CredencialAcessoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtCadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="30dp"
                android:text="@string/txtCadastro"
                android:textColor="@color/colorTextTituloDark"
                app:fontFamily="@font/bungee_shade"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/txtNome"
                android:textColor="@color/colorPopUpDiscordo"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/edtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:enabled="false"
                android:ems="15"
                android:hint="@string/edtNome"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/txtEmail"
                android:textColor="@color/colorTextTituloDark"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"

                android:ems="15"
                android:hint="@string/edtEmail"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/txtSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/txtSenha"
                android:textColor="@color/colorTextTituloDark"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/edtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"

                android:ems="15"
                android:hint="@string/edtSenha"
                android:inputType="numberPassword" />

            <TextView
                android:id="@+id/txtRepitaSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/txtRepitaSenha"
                android:textColor="@color/colorTextTituloDark"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/edtRepitaSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"

                android:ems="15"
                android:hint="@string/edtRepitaSenha"
                android:inputType="numberPassword" />

            <CheckBox
                android:id="@+id/ckboxTermos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:onClick="ValidarTermo"
                android:textStyle="bold"
                android:text="@string/ckboxTermos" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

            <Button
                android:id="@+id/btnVoltar"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btnVoltar" />

            <Button
                android:id="@+id/btnCadastro2"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btnCadastro2" />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>
    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>