<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".CredencialAcessoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="30dp"
                android:text="@string/txtLogin"
                android:textColor="@color/colorTextTituloDark"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="@font/bungee_shade" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/txtEmail"
                android:textColor="@color/colorTextTituloDark"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/edtEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"

                android:ems="15"
                android:hint="@string/edtEmailLogin"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/txtSenhaLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/txtSenhaLogin"
                android:textColor="@color/colorTextTituloDark"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/edtSenhaLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:ems="15"
                android:hint="@string/edtSenhaLogin"
                android:inputType="numberPassword" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/ckboxLembrarLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:onClick="lembrarSenha"
                    android:text="@string/ckboxLembrarLogin"
                    android:textSize="18sp"
                    tools:ignore="OnClick" />

                <TextView
                    android:id="@+id/txtRecuperarSenhaLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:text="@string/txtRecuperarSenhaLogin"
                    android:textColor="@color/colorTextTituloDark"
                    android:textSize="18sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAcessar"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/btnAcessar" />

                <Button
                    android:id="@+id/btnCadastrarLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/btnCadastrarLogin" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/txtVersaoApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:gravity="center_horizontal"
                android:text="@string/txtVersaoApp"
                android:textColor="@color/colorTextTituloDark"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtLerPolitica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:text="@string/txtLerPolitica"
                android:textColor="@color/colorTextTituloDark"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>